起動用にjavafxmavenpluginを追加